yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dio-tutorial-deployment
  namespace: dio-tutorial
  labels:
    app: dio-tutorial
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dio-tutorial
  template:
    metadata:
      labels:
        app: dio-tutorial
    spec:
      imagePullSecrets:
      - name: container-registry-secret
      containers:
      - name: dio-tutorial
        image: mrvaksdigitalcontainerregistry.azurecr.io/dio/tutorial/api:__TAG__
        ports:
        - containerPort: 80
