yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dio-tutorial-service
  namespace: dio-tutorial
  labels:
    app: dio-tutorial
spec:
  selector:
    app: dio-tutorial
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
